Bug 80721 - VIEWING: Pilcrow (Non-printable character) not visible at the end of a centered and right-aligned paragraph
Summary: VIEWING: Pilcrow (Non-printable character) not visible at the end of a center...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.1 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.4.0 target:4.3.1
Keywords: bibisected, regression
: 81685 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-06-30 17:04 UTC by Marc PHILIPPE
Modified: 2015-12-17 08:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
ODT with left-aligned, centered, and justified pararaphs. (15.60 KB, application/vnd.oasis.opendocument.text)
2014-06-30 17:04 UTC, Marc PHILIPPE
Details
bibisectlog (2.16 KB, text/plain)
2014-07-22 20:40 UTC, Jorendc
Details
Screen shot of LibreOffice 4.2.5.2 [LOBug80721.png] (36.58 KB, image/png)
2014-07-25 09:19 UTC, OfficeUser
Details
LibreOfficeDev_4.png (68.42 KB, image/png)
2014-08-04 20:24 UTC, OfficeUser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marc PHILIPPE 2014-06-30 17:04:58 UTC
Created attachment 102023 [details]
ODT with left-aligned, centered, and justified pararaphs.

Problem description:
If a paragraph is centered, its pilcrow (¶) is not visible.

Steps to reproduce:
1. Show non-printing characters.
2. Type any text.
3. Center the paragraph.

Current behavior:
¶ is not visible for centered paragraphs.
It is only visible for left-aligned and justified ones.

Expected behavior:
¶ should be visible.
Operating System: Windows 7
Version: 4.3.0.1 rc
Last worked in: 4.2.5.2 release
Comment 1 Urmas 2014-06-30 20:15:53 UTC
Right-aligned paragraphs doesn't display their ends too.
Comment 2 Serg Bormant 2014-07-16 07:59:47 UTC
If a paragraph is left-aligned or justified, its pilcrow (¶) is visible.
If a paragraph is centered or right-aligned, its pilcrow (¶) is not visible.

Tested on
- LibreOffice 4.3.0.2 rc for Windows
- LibreOffice 4.3.0.2 rc for Linux x86_64
Comment 4 Jorendc 2014-07-23 21:43:55 UTC
*** Bug 81685 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2014-07-24 10:18:12 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c8aa8226962db6ddbca6bfec8e415dfd5ecdda6f

fdo#80721: Use the old way of drawing the pilcrow (but with changed color).



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Jan Holesovsky 2014-07-24 10:26:38 UTC
Pilcrow not showing for right-aligned paragraphs is a different problem, it was not showing already in 4.2.

If you can file a separate bugreport + bibisect that, that would be awesome - thank you! :-)
Comment 7 Commit Notification 2014-07-24 12:31:59 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5a49362a9c75566568e18fff973635a53b9e594e&h=libreoffice-4-3

fdo#80721: Use the old way of drawing the pilcrow (but with changed color).


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 OfficeUser 2014-07-25 09:18:31 UTC
Hi Jan,

thank you very much for your patch.

You said
"Pilcrow not showing for right-aligned paragraphs is a different problem, it was not showing already in 4.2"

I CANNOT confirm this. I have attached a screen shot "LOBug80721.png" where you can see that pilcrow is displayed also correctly for right-aligned paragraphs.

So we should keep this bug open until we have one common a fix for the whole regression.

Could you please state if your patch also fixes right-aligned paragraphs? If yes, please set this bug back to RESOLVED FIXED. If not, please keep it open. Thanks.
Comment 9 OfficeUser 2014-07-25 09:19:19 UTC
Created attachment 103433 [details]
Screen shot of LibreOffice 4.2.5.2 [LOBug80721.png]
Comment 10 Joel Madero 2014-07-28 16:12:15 UTC
@Officeuser - it's been marked as fixed in 4.4 so of course you won't see the fix in 4.2.

You can try 4.4 yourself to see if it's resolved, please don't set to REOPENED unless it's not fixed on any version earlier than 4.4

http://dev-builds.libreoffice.org/daily/master/
Comment 11 OfficeUser 2014-08-04 20:23:57 UTC
@Joel Madero:
Please read comments more carefully. I never said that I would expect that patch in 4.2. I said that pilcrow IS displayed correctly for ALL alignment modes 4.2.5.2.

But nevertheless I can confirm that this regression is completely fixed in 4.4 code. See attachment "LibreOfficeDev_4.png".
Comment 12 OfficeUser 2014-08-04 20:24:45 UTC
Created attachment 104015 [details]
LibreOfficeDev_4.png
Comment 13 OfficeUser 2014-08-04 20:25:40 UTC
So everything is fine now... :-)
Comment 14 Robinson Tryon (qubit) 2015-12-17 08:24:45 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]