fdo#80721: Use the old way of drawing the pilcrow (but with changed color).

This fixes the reported problem (that the pilcrow stopped showning for
centered paragraphs), and additionally makes the pilcrow large for large
paragraphs (like titles) again.

Change-Id: I78d9986c0da6abfb9936984bb8b72d5eba88c9d7
Reviewed-on: https://gerrit.libreoffice.org/10501
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>